<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    tools:context=".Offers">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!-- TODO: Update blank fragment layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/handlee"
                    android:gravity="center_vertical"
                    android:paddingStart="15dp"
                    android:paddingTop="20dp"
                    android:paddingEnd="15dp"
                    android:paddingBottom="20dp"
                    android:text="@string/current_offers"
                    android:textColor="@color/secondary_text"
                    android:textSize="18sp" />

                <ListView
                    android:id="@+id/current_offers_list"
                    android:layout_width="match_parent"
                    android:layout_height="370dp"
                    android:layout_weight=".2"
                    android:nestedScrollingEnabled="true"
                    android:scrollbarAlwaysDrawVerticalTrack="true"
                    android:scrollbarSize="8dp"
                    android:visibility="visible"
                    android:scrollbarThumbVertical="@color/secondary_text" />

                <TextView
                    android:id="@+id/current_offer_no_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/handlee"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp"
                    android:text="@string/no_data"
                    android:textColor="@color/white"
                    android:visibility="gone" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:background="@color/edit_border" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/handlee"
                    android:gravity="center_vertical"
                    android:paddingStart="15dp"
                    android:paddingTop="20dp"
                    android:paddingEnd="15dp"
                    android:paddingBottom="20dp"
                    android:text="@string/old_offers"
                    android:textColor="@color/secondary_text"
                    android:textSize="18sp" />

                <ListView
                    android:id="@+id/old_offers_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight=".2"
                    android:nestedScrollingEnabled="true"
                    android:scrollbarSize="8dp"
                    android:scrollbarThumbVertical="@color/secondary_text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/handlee"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/contact_with_sells"
                    android:textColor="@color/secondary_text"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_weight="1.7"
                        android:src="@drawable/phone" />

                    <TextView
                        android:id="@+id/call1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_weight=".3"
                        android:fontFamily="@font/handlee"
                        android:gravity="center_vertical"
                        android:layoutDirection="ltr"
                        android:lineSpacingExtra="8sp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="@string/sells_call_phone1"
                        android:textAlignment="textEnd"
                        android:textColor="@color/white"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_weight="1.7"
                        android:src="@drawable/phone" />

                    <TextView
                        android:id="@+id/call2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_weight=".3"
                        android:fontFamily="@font/handlee"
                        android:gravity="center_vertical"
                        android:layoutDirection="ltr"
                        android:lineSpacingExtra="8sp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="@string/sells_call_phone2"
                        android:textAlignment="textEnd"
                        android:textColor="@color/white"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_weight="1.7"
                        android:src="@drawable/phone" />

                    <TextView
                        android:id="@+id/call3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_weight=".3"
                        android:fontFamily="@font/handlee"
                        android:gravity="center_vertical"
                        android:layoutDirection="ltr"
                        android:lineSpacingExtra="8sp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="@string/sells_call_phone3"
                        android:textAlignment="textEnd"
                        android:textColor="@color/white"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_weight="1.7"
                        android:src="@drawable/phone" />

                    <TextView
                        android:id="@+id/call4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_weight=".3"
                        android:fontFamily="@font/handlee"
                        android:gravity="center_vertical"
                        android:layoutDirection="ltr"
                        android:lineSpacingExtra="8sp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="@string/sells_call_phone4"
                        android:textAlignment="textEnd"
                        android:textColor="@color/white"
                        android:textSize="18sp" />
                </LinearLayout>


            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</FrameLayout>