<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/main_bg"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/agent_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/handlee"
            android:paddingLeft="20dp"
            android:paddingTop="5dp"
            android:paddingRight="20dp"
            android:paddingBottom="5dp"
            android:text="@string/clients"
            android:textAlignment="viewStart"
            android:textColor="@color/secondary_text"
            android:textSize="21sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ListView
                android:id="@+id/agent_list"
                android:layout_width="match_parent"
                android:layout_height="380dp"
                android:nestedScrollingEnabled="true"
                android:scrollbarAlwaysDrawVerticalTrack="true"
                android:scrollbarSize="6dp"

                android:scrollbarThumbVertical="@color/secondary_text" />

            <TextView
                android:id="@+id/agent_list_no_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/handlee"
                android:text="@string/no_data"
                android:textColor="@color/white"
                android:visibility="gone" />
        </RelativeLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:background="@color/edit_border" />

    <LinearLayout
        android:id="@+id/incentive_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:paddingBottom="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/handlee"
            android:paddingLeft="20dp"
            android:paddingTop="5dp"
            android:paddingRight="20dp"
            android:paddingBottom="5dp"
            android:text="@string/incentives"
            android:textAlignment="viewStart"
            android:textColor="@color/secondary_text"
            android:textSize="21sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="@font/handlee"
                android:gravity="center"
                android:paddingLeft="20dp"
                android:paddingTop="5dp"
                android:paddingRight="20dp"
                android:paddingBottom="5dp"
                android:text="@string/total_desereved"
                android:textAlignment="viewStart"
                android:textColor="@color/secondary_text"
                android:textSize="21sp" />

            <TextView
                android:id="@+id/total_deserved"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="@font/handlee"
                android:gravity="center"
                android:paddingLeft="20dp"
                android:paddingTop="5dp"
                android:paddingRight="20dp"
                android:paddingBottom="5dp"
                android:text="@string/total_desereved"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ListView
                android:id="@+id/incentives_list"
                android:layout_width="match_parent"
                android:layout_height="380dp"
                android:nestedScrollingEnabled="true"
                android:scrollbarAlwaysDrawVerticalTrack="true"
                android:scrollbarSize="6dp"
                android:scrollbarThumbVertical="@color/secondary_text" />

            <TextView
                android:id="@+id/incentives_list_no_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/handlee"
                android:text="@string/no_data"
                android:textColor="@color/white"
                android:visibility="gone" />
        </RelativeLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:background="@color/edit_border" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/handlee"
            android:paddingLeft="20dp"
            android:paddingTop="5dp"
            android:paddingRight="20dp"
            android:paddingBottom="5dp"
            android:text="@string/sells_size"
            android:textAlignment="viewStart"
            android:textColor="@color/secondary_text"
            android:textSize="21sp" />

        <com.github.mikephil.charting.charts.BarChart
            android:layout_height="350dp"
            android:layout_marginLeft="10dp"
            android:id="@+id/sells_size"
            android:layout_width="match_parent"
            android:layout_marginRight="10dp"
            android:visibility="visible" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:background="@color/edit_border" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"

        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/handlee"
            android:paddingLeft="20dp"
            android:paddingTop="5dp"
            android:paddingRight="20dp"
            android:paddingBottom="5dp"
            android:text="@string/sells_no"
            android:textAlignment="viewStart"
            android:textColor="@color/secondary_text"
            android:textSize="21sp" />

        <com.github.mikephil.charting.charts.BarChart
            android:layout_height="300dp"
            android:layout_marginLeft="10dp"
            android:id="@+id/sells_no"
            android:layout_width="match_parent"
            android:layout_marginRight="10dp"
            android:visibility="gone" />
    </LinearLayout>
</LinearLayout>